# reliquary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: .env.example.trainer  .env.example.weight-only  docker-compose.trainer.yml  docker-compose.weight-only.yml  entrypoint.sh
docs/: concepts.md  deployment-docker.md  deployment.md  mining.md  training.md  validating.md
reliquary/: constants.py
reliquary/cli/: main.py
reliquary/environment/: __init__.py  base.py  gsm8k.py  math.py  openmathinstruct.py
reliquary/infrastructure/: chain.py  drand.py  storage.py
reliquary/miner/: engine.py  prompts.py  submitter.py
reliquary/protocol/: crypto.py  grail_verifier.py  signatures.py  submission.py  tokens.py
reliquary/shared/: forward.py  hf_compat.py
reliquary/validator/: batch_selection.py  batcher.py  batcher_v2.py  checkpoint.py  cooldown.py  dedup.py  resume.py  server.py  service.py  state_persistence.py  telemetry.py  training.py  verifier.py  weight_only.py  weights.py
scripts/: .env.example  cheater_curve_threshold.py  launch_miner.sh  launch_validator.sh  measure_sketch_drift.py  setup_remote_box.sh  staleness_drift_curve.py  test_cheater_detection.py
tests/gpu/: targon_run.py  targon_validator.py  test_e2e_gpu.py
tests/integration/: test_grpo_market_smoke.py  test_math_env_smoke.py  test_miner_validator.py  test_openmathinstruct_env_smoke.py  test_v21_window_loop.py
tests/unit/: conftest.py  test_archive_window_content.py  test_batch_filled_cutoff.py  test_batcher.py  (+63 more)
(+22 files in other folders)
